# workout-recorder

./: .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  README_nx.md  docker-compose.yaml  init-db.sql  nx.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: backend-test.yml
apps/backend/: alembic.ini  project.json  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/src/: main.py
apps/backend/src/api/v1/: __init__.py  auth.py  records.py  users.py
apps/backend/src/core/: config.py  database.py  logger.py  security.py
apps/backend/src/models/: __init__.py  record.py  user.py
apps/backend/src/schemas/: __init__.py  record.py  token.py  user.py
apps/backend/src/services/: __init__.py  record_service.py  user_service.py
apps/backend/tests/: conftest.py  test_record.py  test_records.py  test_users.py
apps/frontend/: jest.config.ts  next.config.js  package.json  project.json  tsconfig.json
apps/frontend/.next/: trace
apps/frontend/.next/cache/: .rscinfo
apps/frontend/.next/cache/webpack/client-development/: index.pack.gz.old
apps/frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
apps/frontend/.next/server/app/: page.js  page_client-reference-manifest.js
apps/frontend/.next/server/vendor-chunks/: next.js
apps/frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
apps/frontend/.next/static/chunks/app/: layout.js
apps/frontend/.next/static/webpack/: webpack.667a3bdc1e5ab411.hot-update.js
apps/frontend/.next/types/app/: layout.ts  page.ts
apps/frontend/src/app/: page.tsx
apps/frontend/src/app/profile/: page.tsx
(+3 files in other folders)
